fix alignment in location table
Left aligned text inside location table

Cambios renderizados localmente:


Former-commit-id: bd94030ddde1ebe646f280d0c0345ffe12b9852a

--- a/theme/2014/static/scss/base.scss
+++ b/theme/2014/static/scss/base.scss
@@ -432,11 +432,21 @@ article {
   }
 
   p {
-    text-align: center;
+    left: 35%;
+    position: relative;
+    text-align: left;
   }
 
   li {
     display: inline;
+  }
+}
+
+.subp {
+  p {
+    left: 2%;
+    position: relative;
+    text-align: left;
   }
 }
 
